painting-api-follows-uniformity-criteria-15-12-22